--- a/style.css
+++ b/style.css
@@ -1,16 +1,21 @@
  @import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz@9..144&family=Inter:wght@900&display=swap'); 
 
 body {
+    
+    background-image: url(./img/background1.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    height: 100%;
+    font-family: 'Inter', sans-serif;;
+
+}
+
+.contenedor{
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url(./img/background1.png);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    height: 100vh;
-    font-family: 'Inter', sans-serif;;
-
 }
 
 .button {
@@ -28,6 +33,7 @@ body {
 }
 
 .titulo{
+    width: 100%;
     color: #fff;
-    text-align: right;
+    text-align: left;
 }
