--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
- @import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz@9..144&family=Inter:wght@900&display=swap'); 
+ @import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz@9..144&family=Inter:wght@900&display=swap');
 
 html, body{
     height: 100%;
 }
 
 body {
-    
+
     background-image: url(./img/background1.png);
     background-repeat: no-repeat;
     /* background-size:cover; */
@@ -21,7 +21,7 @@ body {
 .contenedor{
     height: 100%;
     display: flex;
-    
+
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -34,12 +34,12 @@ body {
     justify-content: center;
     align-items: center;
     border: 4px solid #fff;
-   
+
     background-color: rgba(0, 0, 0, 0.363);
     padding: 20px;
     /* height: 3rem; */
     width: 6rem;
-   
+
 
 
 }
@@ -53,5 +53,45 @@ body {
     width: 100%;
     color: #fff;
     text-align: left;
+
+
+/* parte de gabriel */
+
+}
+.jugadores{
+  width: 100%;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+}
+
+
+
+.datos{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  width: 50%;
+  margin-bottom: 20Px;
+  background-color: rgba(0, 0, 0, 0.377);
+  border-radius: 10px;
+  border:2px solid black ;
+  box-shadow: 7px 11px 30px #b0a8b8;
+
+}
+.datos-resividos{
+  height: 150px;
+
+}
+
+.ingreso a {
+  border: 2px solid #fff;
+  text-decoration: none;
+  color: #fff;
+  width: 100%;
+  height: 20px;
+  padding: 10px;
 
 }
