--- a/from.css
+++ b/from.css
@@ -39,6 +39,7 @@ body {
       border-radius: 10px;
       border:2px solid black ;
       box-shadow: 7px 11px 30px #b0a8b8;
+      color: #fff;
     
     }
     .datos-resividos{
@@ -57,3 +58,31 @@ body {
     
     }
     
+
+.player {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 8px;
+}
+
+.player button {
+  border: solid 1px transparent;
+  background-color: transparent;
+  outline: none;
+  color: #fff;
+  font-size: 14px;
+  cursor: pointer;
+
+}
+
+.player button:hover {
+  color: rgb(149, 49, 49);
+}
+
+.form{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
