--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     background-image: url(./img/background1.png);
     background-repeat: no-repeat;
     /* background-size:cover; */
-    font-family: 'Inter', sans-serif;;
+    font-family: 'Inter', sans-serif;
 
 }
 
