--- a/from.css
+++ b/from.css
@@ -1,63 +1,67 @@
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz@9..144&family=Inter:wght@900&display=swap');
 
-html, body{
-    height: 100%;
+html,
+body {
+  height: 100%;
 }
 
 body {
+  width: 100vh;
+  height: 100%;
+  background-image: url(./img/background2.png);
+  background-position: 0%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  font-family: 'Inter', sans-serif;
+}
 
-    background-image: url(./img/background2.png);
-    background-repeat: no-repeat;
-    font-family: 'Inter', sans-serif;;
+.jugadores {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.info {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
 
 }
 
-.jugadores{
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
-    } 
-    
-    .info{
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      
-    
-    }
-    
-    
-    .datos{
-      padding: 10px;
-      width: 50%;
-      margin-bottom: 30Px;
-      background-color: rgba(0, 0, 0, 0.377);
-      border-radius: 10px;
-      border:2px solid black ;
-      box-shadow: 7px 11px 30px #b0a8b8;
-      color: #fff;
-    
-    }
-    .datos-resividos{
-      height: 150px;
-    
-    }
-    
-    .ingreso a {
-      width: 100%;
-      border: 2px solid #fff;
-      text-decoration: none;
-      color: #fff;
-      width: 100%;
-      height: 20px;
-      padding: 10px;
-    
-    }
-    
+
+.datos {
+  padding: 10px;
+  width: 50%;
+  margin-bottom: 30Px;
+  background-color: rgba(0, 0, 0, 0.377);
+  border-radius: 10px;
+  border: 2px solid black;
+  box-shadow: 7px 11px 30px #b0a8b8;
+  color: #fff;
+
+}
+
+.datos-resividos {
+  height: 150px;
+
+}
+
+.ingreso a {
+  width: 100%;
+  border: 2px solid #fff;
+  text-decoration: none;
+  color: #fff;
+  width: 100%;
+  height: 20px;
+  padding: 10px;
+
+}
+
 
 .player {
   display: flex;
@@ -79,7 +83,7 @@ body {
   color: rgb(149, 49, 49);
 }
 
-.form{
+.form {
   width: 100%;
   display: flex;
   justify-content: center;
