--- a/juego.css
+++ b/juego.css
@@ -1,12 +1,11 @@
 body {
-
+    background-size: cover;
     background-image: url(./img/background3.png);
     background-repeat: no-repeat;
     font-family: 'Inter', sans-serif;
-
 }
 
-.tenor-gif-embed{
+.tenor-gif-embed {
     width: 100%;
     height: 100%;
     display: flex;
