--- a/style.css
+++ b/style.css
@@ -1,60 +1,61 @@
  @import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz@9..144&family=Inter:wght@900&display=swap');
 
-html, body{
-    height: 100%;
-}
+ html,
+ body {
+     height: 100%;
+ }
 
-body {
+ body {
 
-    background-image: url(./img/background1.png);
-    background-repeat: no-repeat;
-    /* background-size:cover; */
-    font-family: 'Inter', sans-serif;
+     background-size: cover;
+     background-image: url(./img/background1.png);
+     background-repeat: no-repeat;
+     /* background-size:cover; */
+     font-family: 'Inter', sans-serif;
 
-}
+ }
 
-.img-titulo img{
-    width: 100%;
-}
-
-
-.contenedor{
-    height: 100%;
-    display: flex;
-
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
+ .img-titulo img {
+     width: 100%;
+ }
 
 
+ .contenedor {
+     height: 100%;
+     display: flex;
 
-.button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 4px solid #fff;
-
-    background-color: rgba(0, 0, 0, 0.363);
-    padding: 20px;
-    /* height: 3rem; */
-    width: 6rem;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+ }
 
 
 
-}
+ .button {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     border: 4px solid #fff;
 
-.button a{
-    text-decoration: none;
-    color: #fff;
-}
+     background-color: rgba(0, 0, 0, 0.363);
+     padding: 20px;
+     /* height: 3rem; */
+     width: 6rem;
 
-.titulo{
-    width: 100%;
-    color: #fff;
-    text-align: left;
 
-}
 
-/* parte de gabriel */
+ }
 
+ .button a {
+     text-decoration: none;
+     color: #fff;
+ }
+
+ .titulo {
+     width: 100%;
+     color: #fff;
+     text-align: left;
+
+ }
+
+ /* parte de gabriel */
